Add update to options selected in multiple select box

--- a/components/select/select.css
+++ b/components/select/select.css
@@ -302,6 +302,10 @@ option:disabled {
 	color: var(--adam-disabled-text);
 }
 
+option:checked {
+	color: var(--adam-valid-text);
+	background: var(--adam-valid-bg);
+}
 select[multiple] optgroup,
 select[multiple] option:not(:hover) {
 	background: transparent;
